<resources>
    <string name="app_name" translatable="false">BoaviztApp</string>
    <string name="image_du_haut" translatable="false">image_du_haut</string>
    <string name="boavizta" translatable="false">BoaviztApp</string>
    <string name="d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics" translatable="false">Discover the environmental impact of your server in a few clicks</string>
    <string name="Logo" translatable="false">Logo</string>
    <string name="chargement_en_cours" translatable="false">Loading</string>
    <string name="config_server" translatable="false">SERVER CONFIGURATION</string>
    <string name="calcule" translatable="false">CALCULATE</string>
    <string name="cpu" translatable="false">CPU</string>
    <string name="ram" translatable="false">RAM</string>
    <string name="quantite" translatable="false">Quantity</string>
    <string name="nb_coeurs" translatable="false">Core units</string>
    <string name="architecture" translatable="false">Architecture</string>
    <string name="capacity_gb">Capacity (GB)</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="ssd">SSD</string>
    <string name="hdd">HDD</string>
    <string name="please_wait">Please wait …</string>
    <string name="no_internet_connection">no_internet_connection</string>
    <string name="no_connection">No connection!</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="couldn_t_get_json_from_server">Couldn\'t get json from server.</string>
    <string name="error">ERROR !</string>
    <string name="error_img">error_img</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="textview">loading…</string>
    <string name="chart1_txt_view">loading…</string>
    <string name="chart1_txt_view2">loading…</string>
    <string name="multicritera_impacts_during_lifespan">Multicritera impacts during lifespan</string>
    <string name="global_warming_potential_kgco2eq_total_3153_8">Global Warming Potential (kgCO2eq) - Total :</string>
    <string name="evaluates_the_effect_on_global_warming">Evaluates the effect on global warming</string>
    <string name="usage">Usage:</string>
    <string name="manufacturing">Manufacturing:</string>
    <string name="todo">TODO</string>
    <string name="primary_energy_mj_total_82561">Primary energy (MJ) - Total :</string>
    <string name="consumption_of_energy_resources">Consumption of energy resources</string>
    <string name="abiotic_depletion_potential_kgsbeq_total_0_141528">Abiotic Depletion Potential (kgSbeq) - Total :</string>
    <string name="evaluates_the_use_of_minerals_and_fossil_ressources">Evaluates the use of minerals and fossil ressources</string>
</resources>