<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:theme="@style/Theme.AppCompat.NoActionBar.Boavizta"
    tools:context=".NoConnectionInternet">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/no_internet_connection"
            app:srcCompat="@drawable/no_internet" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/no_connection"
            android:textAlignment="center"
            android:textColor="#E0F2F1"
            android:textSize="30sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/test_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/please_check_your_internet_connection_and_try_again"
            android:textAlignment="center"
            android:textColor="#E0F2F1"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BoaviztaButtonHeader"
                android:layout_width="49dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/image_du_haut"
                android:foregroundTint="#00FFFFFF"
                android:scaleType="center"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:srcCompat="@drawable/ic_launcher_adaptive_fore" />

            <TextView
                android:id="@+id/BoaviztaTextHeader"
                android:layout_width="322dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:minHeight="48dp"
                android:text="@string/boavizta"
                android:textColor="@color/greenDark_boavizt"
                android:textColorHighlight="@color/greenDark_boavizt"
                android:textSize="24sp"
                tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/BoaviztaSousTextHeader"
            style="@android:style/Widget.Holo.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#00838F"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_btn"
            android:text="@string/try_again"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintButtonSize"
            tools:layout_editor_absoluteX="32dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>