<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:scrollbarSize="16dp"
    android:theme="@style/Theme.AppCompat.NoActionBar.Boavizta"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="626dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="136dp"
            android:layout_height="141dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="138dp"
            android:contentDescription="@string/Logo"
            app:srcCompat="@drawable/ic_launcher_adaptive_fore" />

        <TextView
            android:id="@+id/BoaviztaTextHeader"
            android:layout_width="162dp"
            android:layout_height="49dp"
            android:layout_marginStart="124dp"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:minHeight="48dp"
            android:text="@string/boavizta"
            android:textColor="@color/greenDark_boavizt"
            android:textColorHighlight="@color/greenDark_boavizt"
            android:textSize="34sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar.Small.Title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:indeterminate="false"
            android:progressDrawable="@drawable/ic_launcher_adaptive_back"
            android:scrollbarSize="58dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/chargement_en_cours"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/please_wait"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>